# szachista2

./: CMakeLists.txt  LICENSE  generator.hpp  global.hpp  optymalny_ruch.hpp  ruch.hpp  szachista.cpp  szachistaConfig.h.in  tablice.hpp
